--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ node_modules/
 .DS_Store
 *.pem
 
+# Local tooling (keep secrets out of Git)
+.claude/
+.secrets/
+
 # Debug
 npm-debug.log*
 yarn-debug.log*
@@ -38,7 +42,10 @@ next-env.d.ts
 # convex/_generated/
 
 # Sensitive files
-jwt_key.txt
-jwt_key_single.txt
+jwt_key*.txt
 set-jwt-key.js
 set-env.js
+
+# Local duplicates/noise
+*-Yonatan-Office*
+function_spec_*.json
